--- a/index.html
+++ b/index.html
@@ -5,22 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="dist/styles/style.css" />
   </head>
   <body>
-    <h1>Auto Fill</h1>
-    <div class="grid">
-      <div class="item">1</div>
-      <div class="item">2</div>
-      <div class="item">3</div>
-      <div class="item">4</div>
-    </div>
-    <h1>Auto Fit</h1>
-    <div class="grid">
-      <div class="item">1</div>
-      <div class="item">2</div>
-      <div class="item">3</div>
-      <div class="item">4</div>
-    </div>
+    <span>Hello World!</span>
   </body>
 </html>
