--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="dist/styles/style.css" />
+    <link rel="stylesheet" href="../dist/styles/styles.css" />
   </head>
   <body>
-    <span>Hello World!</span>
+    <div class="box">
+      <h1>Hello World!</h1>
+      <button>In box</button>
+    </div>
+    <button>Out box</button>
   </body>
 </html>
