learn scss mixins

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="../dist/styles/styles.css" />
   </head>
   <body>
-    <div class="box">
-      <h1>Hello World!</h1>
-      <button>In box</button>
-    </div>
-    <button>Out box</button>
+    <a href="#">Google</a>
+    <a href="#">Google</a>
+    <a href="#">Google</a>
+    <a href="#">Google</a>
+    <a href="#">Google</a>
   </body>
 </html>
