--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="../dist/styles/styles.css" />
   </head>
   <body>
-    <a href="#">Log In</a>
-    <button>Log Out</button>
+    <h1>Hello</h1>
   </body>
 </html>
